--- a/mobile.html
+++ b/mobile.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+    />
     <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/pc/main.ts"></script>
+    <script type="module" src="./src/mobile/main.ts"></script>
   </body>
 </html>
